[package]
name = "mini-intern"
version = "1.1.0"
edition = "2021"

license-file = "LICENSE"
description = "A small string interner for interning strings. The strings don't have to be small."
homepage = "https://github.com/dylangiles/mini-intern"
documentation = "https://docs.rs/mini-intern"
repository = "https://github.com/dylangiles/mini-intern"
readme = "README.md"

categories = ["interning", "strings"]
authors = ["Dylan Giles <dylanygiles@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
